# hls4ml-fifoadvisor

./: .gitignore  INTEGRATION_STUDY_NOTES.md  README.md  environment.yml  requirements.txt
fifo-advisor/: .clang-format  .clangd  .gitignore  README.md  environment.yml  pyproject.toml
fifo-advisor/experiments/: .env.template  reproducibility.md
fifo-advisor/experiments/cosim_numbers_compare/: analyze.py  collect_fifo_advisor_numbers.py  parse_old_data.py  run.py
fifo-advisor/experiments/cosim_numbers_compare/data/: cosim_runtimes.csv  fifo_opt_runtimes.csv
fifo-advisor/experiments/cosim_numbers_compare/figures/: latex_table.txt
fifo-advisor/experiments/main_run_v0/: exp.py  stats.py  stats_2.py
fifo-advisor/experiments/main_run_v0/data/: __report_baseline_max.txt  __report_baseline_min.txt  data_baseline.csv  data_baseline_dumb.csv  data_points.csv  data_search_counts.csv  tab_hypervolume.tex  tab_improvement.tex
fifo-advisor/experiments/main_run_v0_pna/: exp.py  stats.py  stats_2.py
fifo-advisor/experiments/main_run_v0_pna/data/: __report_baseline_max.txt  data_baseline.csv  (+5 more)
fifo-advisor/experiments/pna_multi/: .gitignore  exp.py  pre_syn.py  trace.py  vis.py
fifo-advisor/experiments/pre_synth_all_designs/: pre_synth.py
fifo-advisor/experiments/runtime_exp_v2/: plot.py  run.py
fifo-advisor/experiments/setup_cached_traces/: run.py
fifo-advisor/experiments/single_synth/: synth.py
fifo-advisor/fifo_advisor/: automation.py  main.py  opt_env.py  solvers.py
fifo-advisor/test_cases_flowgnn/gcn/: hls.tcl
fifo-advisor/test_cases_flowgnn/pna/: hls.tcl
(+49 files in other folders)
