[project]
name = "fifo-advisor"
version = "0.1.0"
description = "FIFOAdvisor is a tool to optimize FIFO sizes in high-level synthesis designs to minimize latency and resource usage while ensuring deadlock-free FIFO sizing."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = ["numpy", "pandas", "matplotlib", "seaborn", "scipy", "pymoo"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
fifo-advisor = "fifo_advisor.main:cli"

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[tool.mypy]
ignore_missing_imports = true
